# bev

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: dependencies.yml  release.yml  tests.yml  version.yml
bev/: __init__.py  __version__.py  compat.py  config.py  exceptions.py  hash.py  hooks.py  hookspecs.py  interface.py  local.py  ops.py  shortcuts.py  testing.py  utils.py  vc.py  wc.py
bev/cli/: add.py  app.py  blame.py  entrypoint.py  fetch.py  init.py  pull.py  storage.py  update.py  utils.py
bev/config/: __init__.py  base.py  compat.py  hooks.py  hostname.py  include.py  legacy.py  location.py  parse.py  registry.py  remote.py  utils.py
tests/: conftest.py  setup.sh  test_add.py  test_cli.py  test_config.py  test_hash_signature.py  test_interface.py  test_ops.py  test_registry.py  test_vc.py
tests/assets/: to-init.yml
tests/configs/: compound.yml  full.yml  nested.yml  override.yml  remote.yml  second.yml  single-full.yml  third.yml
tests/configs/errors/: base.yml  child.yml
tests/configs/legacy/: custom-cache-storage.yml  nested.yml  override.yml  single-full.yml  single-simplified.yml  third.yml
