[project]
name = 'bev'
dynamic = ['version', 'dependencies']
description = 'A small manager for versioned data'
readme = 'README.md'
requires-python = '>=3.7'
license = { file = 'LICENSE' }
keywords = ['data', 'version control']
authors = [
    { name = 'Max', email = 'max@ira-labs.com' },
    { name = 'Talgat', email = 't.saparov@ira-labs.com' },
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3 :: Only',
]

[project.urls]
'Homepage' = 'https://github.com/neuro-ml/bev'
'Issues' = 'https://github.com/neuro-ml/bev/issues'
'Source' = 'https://github.com/neuro-ml/bev'
'Docs' = 'https://neuro-ml.github.io/bev'

[project.scripts]
bev = 'bev.cli.entrypoint:entrypoint'

[build-system]
requires = ['setuptools>=43.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
include = ['bev']

[tool.setuptools.package-data]
bev = ['py.typed']

[tool.setuptools.dynamic]
version = { attr = 'bev.__version__.__version__' }
dependencies = { file = 'requirements.txt' }

[tool.flake8]
# W503: line break before binary operator is actually considered best-practice
# E203: spaces around complex variables in slices are pep-right
# F401,F403: unused imports in __init__.py-s
# I251: allow absolute imports in upper files
# B028: !r is not supported for python<3.8
# C408: for identifier-like fields dict(x=y) is just more concise
ignore = ['W503', 'E203', 'B028', 'C408']
per-file-ignores = [
    '**/__init__.py:F401,F403',
    'tests/*:I251',
    'bev/cli/*:B008',
]
max-line-length = 120
banned-modules = 'bev.* = Use relative imports'

[tool.isort]
line_length = 120
lines_after_imports = 2
combine_as_imports = true
multi_line_output = 5
